Added SodaSparkScan task

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -535,6 +535,11 @@ title = "SodaSQL Tasks"
 module = "prefect.tasks.sodasql"
 classes = ["SodaSQLScan"]
 
+[pages.tasks.sodaspark]
+title = "SodaSpark Tasks"
+module = "prefect.tasks.sodaspark"
+classes = ["SodaSparkScan"]
+
 [pages.tasks.databricks]
 title = "Databricks Tasks"
 module = "prefect.tasks.databricks"
