vite, eslint, and jest all working

--- a/orion-ui/tsconfig.json
+++ b/orion-ui/tsconfig.json
@@ -15,8 +15,7 @@
     "sourceMap": true,
     "baseUrl": ".",
     "types": [
-      "webpack-env",
-      "jest",
+      "@types/jest",
       "d3",
       "@prefecthq/miter-design"
     ],
