Remove the clear_jest command

--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -6,8 +6,7 @@
     "serve": "vite",
     "build": "vite build",
     "test:unit": "jest src",
-    "lint": "eslint src --ext .js,.ts,.vue",
-    "clear_jest": "jest --clearCache"
+    "lint": "eslint src --ext .js,.ts,.vue"
   },
   "dependencies": {
     "@prefecthq/miter-design": "0.1.9",
