--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -12,6 +12,7 @@
     "@prefecthq/miter-design": "0.1.11",
     "core-js": "^3.6.5",
     "d3": "^7.0.0",
+    "esbuild": "^0.13.4",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.5",
     "vue-router": "^4.0.0-0",
@@ -30,8 +31,8 @@
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-rc.16",
     "date-fns": "^2.25.0",
-    "eslint-plugin-vue": "^8.0.3",
     "eslint": "^8.2.0",
+    "eslint-plugin-vue": "^8.0.3",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "sass": "^1.35.2",
