--- a/changes/pr5135.yaml
+++ b/changes/pr5135.yaml
@@ -1,2 +1,2 @@
 enhancement:
-  - "Adds artifacts to DbtCloudRunJob task - [#5135](https://github.com/PrefectHQ/prefect/pull/5135)"
+  - "Add artifact publishing to `DbtCloudRunJob` task - [#5135](https://github.com/PrefectHQ/prefect/pull/5135)"
