--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -84,7 +84,8 @@ jobs:
           git push --set-upstream origin HEAD
           gh pr create \
             --title "Publish docs from release ${GITHUB_REF#refs/*/}" \
-            --body '_automatically created with `gh` cli on merge to `main`_'
+            --body '_automatically created with `gh` cli on merge to `main`_' \
+            --base docs
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
