--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -74,7 +74,7 @@ nav:
         - Tasks: concepts/tasks.md
         - States: concepts/states.md
         - Orchestration Rules: concepts/orchestration.md
-        - Task Runners: concepts/task_runners.md
+        - Task Runners: concepts/task-runners.md
         - Deployments: concepts/deployments.md
         - Schedules: concepts/schedules.md
         - Settings: concepts/settings.md
@@ -88,7 +88,7 @@ nav:
             - 'prefect.deployments': api-ref/prefect/deployments.md
             - 'prefect.engine': api-ref/prefect/engine.md
             - 'prefect.exceptions': api-ref/prefect/exceptions.md
-            - 'prefect.task_runners': api-ref/prefect/task_runners.md
+            - 'prefect.task_runners': api-ref/prefect/task-runners.md
             - 'prefect.flows': api-ref/prefect/flows.md
             - 'prefect.futures': api-ref/prefect/futures.md
             - 'prefect.serializers': api-ref/prefect/serializers.md
