--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,2 +1,7 @@
 # global owners
-*   @madkinsz @zangell44
+*   @madkinsz
+
+# task library owners
+/src/prefect/tasks           @desertaxle
+/tests/tasks                 @desertaxle
+/docs/core/task_library      @desertaxle
