--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,3 +5,6 @@
 /src/prefect/tasks           @desertaxle
 /tests/tasks                 @desertaxle
 /docs/core/task_library      @desertaxle
+
+# documentation owners
+/docs                        @tpdorsey
