Adds Airbyte to the ptask library overview page

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -764,3 +764,4 @@ classes = ["CensusSyncTask"]
 title = "Airbyte Tasks"
 module = "prefect.tasks.airbyte"
 classes = ["AirbyteConnectionTask"]
+partnership_integration = true
