--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -340,6 +340,7 @@ classes = ["DatasetCreateFromDelimitedFiles",
 title = "Fivetran Tasks"
 module = "prefect.tasks.fivetran"
 classes = ["FivetranSyncTask"]
+partnership_integration = true
 
 [pages.tasks.prefect]
 title = "Prefect Tasks"
@@ -399,6 +400,7 @@ classes = [
         "DbtShellTask",
         "DbtCloudRunJob"
         ]
+partnership_integration = true
 
 [pages.tasks.asana]
 title = "Asana Tasks"
@@ -471,6 +473,7 @@ classes = [
 title = "Great Expectations Task"
 module = "prefect.tasks.great_expectations"
 classes = ["RunGreatExpectationsValidation"]
+partnership_integration = true
 
 [pages.tasks.gsheets]
 title = "Google Sheets Tasks"
@@ -761,3 +764,4 @@ classes = ["CensusSyncTask"]
 title = "Airbyte Tasks"
 module = "prefect.tasks.airbyte"
 classes = ["AirbyteConnectionTask"]
+partnership_integration = true
