--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -22,6 +22,7 @@
     "@babel/helper-compilation-targets": "^7.16.3",
     "@babel/runtime": "^7.16.3",
     "@types/d3": "^7.0.0",
+    "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
     "@types/sass-loader": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
@@ -33,6 +34,7 @@
     "date-fns": "^2.25.0",
     "eslint": "^8.2.0",
     "eslint-plugin-vue": "^8.0.3",
+    "faker": "^5.5.3",
     "jest": "^27.3.1",
     "prettier": "^2.4.1",
     "sass": "^1.35.2",
