Changes partnership integration callout to verified task callout

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -340,7 +340,7 @@ classes = ["DatasetCreateFromDelimitedFiles",
 title = "Fivetran Tasks"
 module = "prefect.tasks.fivetran"
 classes = ["FivetranSyncTask"]
-partnership_integration = true
+verified_task = true
 
 [pages.tasks.prefect]
 title = "Prefect Tasks"
@@ -400,7 +400,7 @@ classes = [
         "DbtShellTask",
         "DbtCloudRunJob"
         ]
-partnership_integration = true
+verified_task = true
 
 [pages.tasks.asana]
 title = "Asana Tasks"
@@ -473,7 +473,7 @@ classes = [
 title = "Great Expectations Task"
 module = "prefect.tasks.great_expectations"
 classes = ["RunGreatExpectationsValidation"]
-partnership_integration = true
+verified_task = true
 
 [pages.tasks.gsheets]
 title = "Google Sheets Tasks"
@@ -764,4 +764,4 @@ classes = ["CensusSyncTask"]
 title = "Airbyte Tasks"
 module = "prefect.tasks.airbyte"
 classes = ["AirbyteConnectionTask"]
-partnership_integration = true
+verified_task = true
