--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "serve": "vite",
     "build": "vite build",
-    "test:unit": "jest src",
+    "test": "jest",
+    "test:unit": "jest --projects tests/unit",
+    "test:integration": "jest --projects tests/integration",
+    "test:clear-cache": "jest --clearCache",
     "lint": "eslint src --ext .js,.ts,.vue"
   },
   "dependencies": {
@@ -22,8 +25,12 @@
     "@babel/helper-compilation-targets": "^7.16.3",
     "@babel/runtime": "^7.16.3",
     "@types/d3": "^7.0.0",
+    "@types/expect-puppeteer": "^4.4.7",
     "@types/faker": "^5.5.9",
     "@types/jest": "^27.0.2",
+    "@types/jest-dev-server": "^5.0.0",
+    "@types/jest-environment-puppeteer": "^4.4.1",
+    "@types/puppeteer": "^5.4.4",
     "@types/sass-loader": "^8.0.2",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
@@ -36,7 +43,11 @@
     "eslint-plugin-vue": "^8.0.3",
     "faker": "^5.5.3",
     "jest": "^27.3.1",
+    "jest-dev-server": "^6.0.0",
+    "jest-puppeteer": "^6.0.0",
+    "miragejs": "^0.1.43",
     "prettier": "^2.4.1",
+    "puppeteer": "^11.0.0",
     "sass": "^1.35.2",
     "ts-jest": "^27.0.7",
     "ts-node": "10.1.0",
