--- a/orion-ui/package.json
+++ b/orion-ui/package.json
@@ -6,8 +6,8 @@
     "serve": "vite",
     "build": "vite build",
     "test": "cross-env PREFECT_USE_MIRAGEJS=true PREFECT_UI_PORT=4002 jest",
-    "test:unit": "cross-env PREFECT_USE_MIRAGEJS=true PREFECT_UI_PORT=4002 jest --projects tests/unit",
-    "test:integration": "cross-env PREFECT_USE_MIRAGEJS=true PREFECT_UI_PORT=4002 jest --projects tests/integration",
+    "test:unit": "cross-env PREFECT_USE_MIRAGEJS=true PREFECT_UI_PORT=4002 jest --projects test-projects/unit",
+    "test:integration": "cross-env PREFECT_USE_MIRAGEJS=true PREFECT_UI_PORT=4002 jest --projects test-projects/integration",
     "test:clear-cache": "jest --clearCache",
     "lint": "eslint src --ext .js,.ts,.vue"
   },
