--- a/orion-ui/tsconfig.json
+++ b/orion-ui/tsconfig.json
@@ -39,9 +39,7 @@
   "include": [
     "src/**/*.ts",
     "src/**/*.tsx",
-    "src/**/*.vue",
-    "tests/**/*.ts",
-    "tests/**/*.tsx"  
+    "src/**/*.vue"
   ],
   "exclude": [
     "node_modules"
