Documented Firebolt in outline.toml as per Prefect documentation

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -442,10 +442,7 @@ classes = [
 [pages.tasks.firebolt]
 title = "Firebolt Tasks"
 module = "prefect.tasks.firebolt"
-classes = [
-         "FireboltQuery",
-         "FireboltQueryGetData"
-         ]
+classes = ["FireboltQuery"]
 
 [pages.tasks.gcp]
 title = "Google Cloud Tasks"
