--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -113,6 +113,7 @@ jobs:
   run-tests-lower-bounds:
     name: Lower bound requirements
 
+    # Note we're running on Ubuntu LTS instead of latest
     runs-on: ubuntu-18.04
 
     steps:
@@ -125,7 +126,34 @@ jobs:
         with:
           python-version: 3.7
 
-      - name: Generate lower bound requirements
+      - name: Install minimum sqlite3 version
+        run: |
+          apt-get update
+          apt-get install -y tcl
+          wget https://github.com/sqlite/sqlite/archive/refs/tags/version-3.24.0.tar.gz
+          tar xzf version-3.24.0.tar.gz
+          cd sqlite-version-3.24.0/
+          export CFLAGS="-DSQLITE_ENABLE_FTS3 \
+              -DSQLITE_ENABLE_FTS3_PARENTHESIS \
+              -DSQLITE_ENABLE_FTS4 \
+              -DSQLITE_ENABLE_FTS5 \
+              -DSQLITE_ENABLE_JSON1 \
+              -DSQLITE_ENABLE_LOAD_EXTENSION \
+              -DSQLITE_ENABLE_RTREE \
+              -DSQLITE_ENABLE_STAT4 \
+              -DSQLITE_ENABLE_UPDATE_DELETE_LIMIT \
+              -DSQLITE_SOUNDEX \
+              -DSQLITE_TEMP_STORE=3 \
+              -DSQLITE_USE_URI \
+              -O2 \
+              -fPIC"
+          export PREFIX="/usr/local"
+          LIBS="-lm" ./configure --disable-tcl --enable-shared --enable-tempstore=always --prefix="$PREFIX"
+          make
+          make install
+          ln -sf /usr/local/lib/libsqlite3.so /usr/lib/x86_64-linux-gnu/libsqlite3.so
+
+      - name: Generate lower bound python requirements
         # Creates lower bound files then replaces the input files so we can do a normal install
         run: |
           ./scripts/generate-lower-bounds.py requirements.txt > requirements-lower.txt
@@ -142,4 +170,5 @@ jobs:
         env:
           PREFECT_ORION_DATABASE_CONNECTION_URL: "sqlite+aiosqlite:///orion-tests.db"
         run: |
-          pytest tests
+          
+          pytest tests -x
