--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -144,7 +144,7 @@ jobs:
           gh pr create \
             --title "Publish code from Orion release ${GITHUB_REF#refs/*/}" \
             --body '_automatically created with `gh` cli on merge to `main`_' \
-            --base orion
+            --base orion --repo prefecthq/prefect
 
   publish-release:
     name: Publish Release to PyPI
