--- a/changes/pr5001.yaml
+++ b/changes/pr5001.yaml
@@ -3,4 +3,4 @@ fix:
   - "Allow unsetting imagePullSecrets with an empty string - [#5001](https://github.com/PrefectHQ/prefect/pull/5001)"
 
 contributor:
-  - "[Andrew Farley](https://github.com/AndrewFarley)"
+  - "[Farley Farley](https://github.com/AndrewFarley)"
