--- a/.github/workflows/python_tests.yaml
+++ b/.github/workflows/python_tests.yaml
@@ -47,7 +47,7 @@ jobs:
         env: 
           PREFECT_ORION_DATABASE_CONNECTION_URL: "sqlite+aiosqlite:///orion-tests.db"
         run: |
-          pytest tests
+          pytest tests -vv
 
   
 
@@ -107,7 +107,7 @@ jobs:
         env: 
           PREFECT_ORION_DATABASE_CONNECTION_URL: 'postgresql+asyncpg://prefect:prefect@localhost/orion'
         run: |
-          pytest tests
+          pytest tests -vv
 
 
   run-tests-lower-bounds:
