--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ pydantic >= 1.8, < 2.0
 pyyaml >=5.0, <= 6.0
 pytz >= 2021.1
 rich >= 10.0, < 11.0
-slugify >= 5.0
+python-slugify >= 5.0
 sqlalchemy[asyncio] >= 1.4.20, < 2.0
 typer >= 0.4.0, < 1.0
 typing_extensions >= 3.10.0.1, < 5.0
