--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,11 @@ click >= 7.1.2, < 9.0
 cloudpickle >= 1.5, < 3.0
 croniter >= 1.0.1, <2.0
 distributed >= 2021.8.0
+docker >= 4.0
 fastapi >= 0.66, < 0.70.1
 fsspec >= 2021.7.0
 httpx >= 0.18, < 0.22
+packaging >= 17.0
 pendulum >= 2.1.2, < 3.0
 pydantic >= 1.8.2, < 2.0
 pyyaml >=5.1b1, <= 6.0
