--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -498,13 +498,13 @@ jobs:
               --build-arg PREFECT_VERSION=$CIRCLE_SHA1 \
               --build-arg PYTHON_VERSION=$PYTHON_VERSION \
               --build-arg EXTRAS=$EXTRAS \
-              -t prefecthq/prefect:1.0rc.dev \
+              -t prefecthq/prefect:1.0rc0 \
               .
       - run:
-          name: Push 1.0rc.dev tag
+          name: Push 1.0rc0 tag
           command: |
             docker login --username  $DOCKER_HUB_USER --password $DOCKER_HUB_PW
-            docker push prefecthq/prefect:1.0rc.dev
+            docker push prefecthq/prefect:1.0rc0
   promote_server_artifacts:
     docker:
       - image: docker
