--- a/changes/pr5280.yaml
+++ b/changes/pr5280.yaml
@@ -1,5 +1,5 @@
 feature:
-  - "Added CubeJS Query Task - [#5280](https://github.com/PrefectHQ/prefect/pull/5280)"
+  - "Added Cube.js Query Task - [#5280](https://github.com/PrefectHQ/prefect/pull/5280)"
 
 contributor:
   - "[Alessandro Lollo](https://github.com/AlessandroLollo)"
