Add 'Firebolt' to Prefect task library. (#5265)
* Firebolt prefect tasks (#1)

* Allow `Azure` storage to overwrite existing blobs (#5103)

* Allow `Azure` storage to overwrite existing blobs

* Move flaky test mark to class level

* Add test covering `overwrite`

* Spell correctly

* Fixup assertion

* Use mock.ANY

* Today is not a day for spelling correctly

* Add changes entry

* Glob Task (#5077)

* Adds glob test with requested recursion changes

* Fixes typo in function name

Co-authored-by: Michael Adkins <madkinszane@gmail.com>

* Fixes typo in doc string

Co-authored-by: Michael Adkins <madkinszane@gmail.com>

* Adds more details to doc string for path arg

Co-authored-by: Michael Adkins <madkinszane@gmail.com>

* Adds more detail to the doc string for pattern arg

Co-authored-by: Michael Adkins <madkinszane@gmail.com>

* Swaps out tmpdir for tmp_path

* Fixes formatting issues

* Fixes flake8 issues

Co-authored-by: Michael Adkins <madkinszane@gmail.com>

* PagerDuty integration review and revisions (#5102)

* Revisions to integration setup after confirming steps, added image.

* Fix typos

* Minor revisions in response to review feedback.

* Clarify which Cloud plans support automations.

* Fixed ReadTimeoutErrors for kubernetes client after connection reset by keep-alive connections (#5066)

* get batch + core k8s client from utilities and modified tests accordingly

* fixed test_generate_job_spec_prefect_logging_level_environment_variable test

* added keep-alive functionality & added test

* added change document

* black reformatting

* fixed test_kube_client_with_keep_alive

* added return type annotation

* fixed flake8 problems

Co-authored-by: Jonas Miederer <jonas.miederer@daimler.com>

* Update click requirement from <8.0,>=7.0 to >=7.0,<9.0 (#4534)

Updates the requirements on [click](https://github.com/pallets/click) to permit the latest version.
- [Release notes

--- a/docs/outline.toml
+++ b/docs/outline.toml
@@ -453,6 +453,11 @@ classes = [
         "Zip",
         ]
 
+[pages.tasks.firebolt]
+title = "Firebolt Tasks"
+module = "prefect.tasks.firebolt"
+classes = ["FireboltQuery"]
+
 [pages.tasks.gcp]
 title = "Google Cloud Tasks"
 module = "prefect.tasks.gcp"
