--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -163,3 +163,53 @@ jobs:
         uses: pypa/gh-action-pypi-publish@master
         with:
           password: ${{ secrets.PYPI_API_TOKEN }}
+
+          name: ci
+
+  publish-images:
+    strategy:
+      matrix:
+        python-version:
+          - 3.7
+          - 3.8
+          - 3.9
+      max-parallel: 1
+
+    runs-on: ubuntu-latest
+    steps:
+
+      # Not needed until we add support for multiarchecture builds
+      # - name: Set up QEMU
+      #   uses: docker/setup-qemu-action@v1
+
+      # - name: Set up Docker Buildx
+      #   uses: docker/setup-buildx-action@v1
+
+      - name: Generate Docker tags
+        id: metadata
+        uses: docker/metadata-action@v3
+        with:
+          images: prefecthq/prefect
+          tags: |
+            type=pep440,pattern={{version}}
+            type=pep440,pattern={{major}}.{{minor}}
+            type=pep440,pattern={{major}}
+            type=sha
+          flavor: |
+            latest=false
+            suffix=-python${{ matrix.python-version }}
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push images
+        uses: docker/build-push-action@v2
+        with:
+          build-args:
+            PYTHON_VERSION=${{ matrix.python-version }}
+          context: .
+          tags: ${{ steps.metadata.outputs.tags }}
+          labels: ${{ steps.metadata.outputs.labels }}
