--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -178,14 +178,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      # Not needed until we add support for multiarchecture builds
+      # Not needed until we want multiarchecture builds
       # - name: Set up QEMU
       #   uses: docker/setup-qemu-action@v1
 
       # - name: Set up Docker Buildx
       #   uses: docker/setup-buildx-action@v1
 
-      - name: Generate Docker tags
+      - name: Generate image metadata
         id: metadata
         uses: docker/metadata-action@v3
         with:
