--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,11 +70,9 @@ jobs:
       # - name: Set up QEMU
       #   uses: docker/setup-qemu-action@v1
 
-      # - name: Set up Docker Buildx
-      #   uses: docker/setup-buildx-action@v1
-      
-      # This should match the image metadata generation in `publish-images`
-      # allowing a preview of the tags and labels before publish
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+        
       - name: Preview image metadata
         id: metadata
         uses: docker/metadata-action@v3
