--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -99,7 +99,7 @@ jobs:
       - name: Test docker image
         run: |
           docker load --input /tmp/image-${{ matrix.python-version }}.tar
-          docker run --rm prefecthq/prefect:ci prefect --version
+          docker run --rm prefecthq/prefect:${GITHUB_REF#refs/*/} prefect --version
 
       - name: Upload image artifact
         uses: actions/upload-artifact@v2
