--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,6 +70,7 @@ jobs:
       # - name: Set up QEMU
       #   uses: docker/setup-qemu-action@v1
 
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
@@ -87,9 +88,15 @@ jobs:
             latest=false
             suffix=-python${{ matrix.python-version }}
 
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+
       - name: Build image
         uses: docker/build-push-action@v2
         with:
+          context: .
           build-args:
             PYTHON_VERSION=${{ matrix.python-version }}
           tags: ${{ steps.metadata.outputs.tags }}
